--- a/Project.toml
+++ b/Project.toml
@@ -6,5 +6,7 @@ version = "0.0.9"
 [deps]
 Olive = "724ecaf6-c7a0-4c22-b37e-0bb7b4193da8"
 PyCall = "438e738f-606a-5dbb-bf0a-cddfbfd45ab0"
-ToolipsDefaults = "1710be6b-e895-498d-ba35-e3ff0dac7995"
-ToolipsSession = "2fe55384-55bc-4df3-9d59-c817d405cd05"
+
+[compat]
+Olive = "0.0.9"
+PyCall = "1.96.2"
