--- a/Project.toml
+++ b/Project.toml
@@ -1,4 +1,4 @@
-name = "OlivePy"
+name = "OlivePython"
 uuid = "723e633f-9a76-4329-b2d1-0431e20a66c6"
 authors = ["emmac <emmettgb@gmail.com>"]
 version = "0.0.9"
